feat: leave room logic
